--- a/environment.yml
+++ b/environment.yml
@@ -184,18 +184,42 @@ dependencies:
   - zstd=1.5.6
   - pip:
       - accelerate==0.33.0
+      - black==24.8.0
+      - click==8.1.7
+      - contourpy==1.3.0
+      - cycler==0.12.1
       - diffusers==0.30.2
+      - fonttools==4.53.1
       - fsspec==2024.6.1
       - huggingface-hub==0.24.6
+      - imageio==2.35.1
       - importlib-metadata==8.4.0
+      - importlib-resources==6.4.4
+      - kiwisolver==1.4.5
+      - lazy-loader==0.4
+      - matplotlib==3.9.2
+      - mypy-extensions==1.0.0
       - numpy==1.26.4
+      - opencv-python==4.10.0.84
       - packaging==24.1
+      - pathspec==0.12.1
+      - piq==0.8.0
+      - platformdirs==4.2.2
       - psutil==6.0.0
+      - pyparsing==3.1.4
+      - python-dateutil==2.9.0.post0
+      - python-dotenv==1.0.1
       - regex==2024.7.24
       - safetensors==0.4.4
+      - scikit-image==0.24.0
+      - scipy==1.13.1
+      - six==1.16.0
+      - tifffile==2024.8.30
       - tokenizers==0.19.1
+      - tomli==2.0.1
       - tqdm==4.66.5
       - transformers==4.44.2
       - xformer==1.0.1
+      - xformers==0.0.27.post2
       - zipp==3.20.1
 prefix: /home/sylvain_gavoille/miniconda3/envs/myenv
